# AlyraSign

./: .env  .env.local.example  .gitignore  Anchor.toml  LICENSE  README.md  README.old  deployer-keypair.json  etudiants_group1.txt  next.config.js  next.config.mjs  package-lock.json  package.json  vercel.json
.cargo/: config.toml
.cursor/rules/: alyrasignrules.mdc
anchor/: Anchor.toml
anchor/programs/alyra-sign/: Cargo.toml
anchor/programs/alyra-sign/src/: lib.rs
anchor/programs/alyrasign/: Cargo.toml
backup_projet/src/app/: WalletContextProvider.tsx  page.tsx
backup_projet/src/config/: param.config.ts
backup_projet/src/idl/: alyra_sign.ts  alyrasign.json
backup_projet/src/services/: blockchain.service.tsx  signature.service.ts  simple-connection.ts  solana.service.ts  storage.service.ts  student.service.ts  utils.ts
programs/alyrasign/: Cargo.toml
programs/alyrasign/src/: lib.rs
src/app/: layout.tsx  metadata.ts  page.tsx
src/app/admin/: page.tsx
src/app/components/: AdminGuard.tsx  AppWalletProvider.tsx  CandidateList.tsx  CreateFormationForm.tsx  CreateSessionForm.tsx  EditFormationForm.tsx  EditSessionForm.tsx  Navigation.tsx  SignatureValidation.tsx
src/app/config/: param.config.ts
src/app/context/: WalletContextProvider.tsx
src/app/create/: page.tsx
src/app/hooks/: useSolana.ts
src/app/services/: blockchain.service.tsx  program.service.ts  roles.service.ts  signature.service.ts  solana.service.ts  storage.service.ts  (+1 more)
src/components/: TopBar.tsx
src/config/: param.config.ts
src/idl/: alyra_sign.ts
src/types/: anchor.d.ts
(+21 files in other folders)
