[package]
name = "alyrasign"
version = "0.1.0"
description = "Programme de gestion des présences sur Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alyrasign"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
solana-program = "1.9.13" 