[package]
name = "alyra-sign"
version = "0.1.0"
description = "Programme de gestion des présences sur Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alyra_sign"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = "1.16" 